--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Hypefactors ApS",
+            "name": "Hypefactors A/S",
             "email": "support@hypefactors.com",
             "homepage": "https://hypefactors.com"
         }
