--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "friendsofphp/php-cs-fixer": "^2.8"
+        "php": "^7.4 || ^8.0",
+        "friendsofphp/php-cs-fixer": "^2.17"
     },
     "autoload": {
         "psr-4": {
