--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Hypefactors\\CodeStandards\\": "src"
+            "Hypefactors\\CodeStandards\\": "src/"
         }
     },
     "config": {
