--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "nunomaduro/larastan": "^2.6",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-mockery": "^1.1",
+        "rector/rector": "^0.17.6",
         "symplify/easy-coding-standard": "^11.5"
     },
     "require-dev": {
